--- a/my.css
+++ b/my.css
@@ -76,3 +76,7 @@
   background-image: -moz-linear-gradient(top, #9e3939, #c44f4f);
   background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #9e3939), color-stop(1, #c44f4f));
   -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorStr='#9e3939', EndColorStr='#c44f4f')"; }
+
+li {
+  font-weight: normal !important;
+}
